# nox_ext

./: .buildinfo  CHANGES.html  CHANGES.rst  README.html  README.rst  genindex.html  index.html  noxfile.py  objects.inv  output.json  pyproject.toml  search.html  searchindex.js
#arch/: _notes_.txt
.doctrees/: CHANGES.doctree  README.doctree  environment.pickle  index.doctree
_static/: bizstyle.js  documentation_options.js
src/nox_ext/: _nox_ext.py
tests/: __main__.py  test_main.py
